refactor: update Holders.java